--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
   <div class="container hidden" id="dashboard">
     <h2>Dashboard <span id="userRole"></span></h2>
+    <button onclick="showRiwayat()">Riwayat Cuti/Kasbon</button>
     <button onclick="showForm('absen')">Form Absensi</button>
     <button onclick="showForm('cuti')">Form Cuti</button>
     <button onclick="showForm('kasbon')">Form Kasbon</button>
